--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "cps530_assignment",
-  "version": "1.0.0",
-  "description": "CPS530 Final Assignment",
-  "main": "app.js",
+  "name": "myapp",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NoelKocheril/cps530.git"
-  },
-  "keywords": [
-    "HTTP",
-    "Javascript",
-    "Node",
-    "Express"
-  ],
-  "author": "Noel Kocheril",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/NoelKocheril/cps530/issues"
-  },
-  "homepage": "https://github.com/NoelKocheril/cps530#readme"
+  "dependencies": {
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.0"
+  }
 }
